--- a/etc/systemd/system/iptables.service
+++ b/etc/systemd/system/iptables.service
@@ -1,13 +1,13 @@
 [Unit]
 Description=Packet Filtering Framework
 DefaultDependencies=no
-After=systemd-sysctl.service
-Before=sysinit.target
+Wants=network-pre.target
+Before=network-pre.target
+
 [Service]
 Type=oneshot
 ExecStart=/sbin/iptables-restore /etc/iptables/iptables.rules
 ExecReload=/sbin/iptables-restore /etc/iptables/iptables.rules
 ExecStop=/etc/iptables/flush-iptables.sh
 RemainAfterExit=yes
-[Install]
-WantedBy=multi-user.target
+
