--- a/etc/systemd/system/iptables.service
+++ b/etc/systemd/system/iptables.service
@@ -1,8 +1,7 @@
 [Unit]
 Description=Packet Filtering Framework
 DefaultDependencies=no
-Wants=network-pre.target
-Before=network-pre.target
+Before=network.target
 
 [Service]
 Type=oneshot
@@ -11,3 +10,5 @@ ExecReload=/sbin/iptables-restore /etc/iptables/iptables.rules
 ExecStop=/etc/iptables/flush-iptables.sh
 RemainAfterExit=yes
 
+[Install]
+WantedBy=multi-user.target
